# DRG_MissionMonitor

./: Dockerfile  README.md  docker-compose.yaml  nginx.conf
KPI/: kpi_main.tex  resource_weight_table.tex  weight_table.tex
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  api.md
backend/.github/workflows/: image.yml  release.yml
backend/config/: config.json
backend/config/kpi/: entity_list_combined.csv  transform_range.txt
backend/config/mapping/: entity_blacklist.txt  resource.txt  weapon_combine.txt
backend/migrations/2024-09-21-000000_create_mission_type/: down.sql
backend/migrations/2024-09-21-000001_create_player/: down.sql  up.sql
backend/migrations/2024-09-21-000002_create_character/: down.sql
backend/migrations/2024-09-21-000003_create_resource/: up.sql
backend/migrations/2024-09-21-000004_create_weapon/: up.sql
backend/migrations/2024-09-21-000007_create_player_info/: down.sql  up.sql
backend/migrations/2024-09-21-000008_create_damage_info/: down.sql  up.sql
backend/migrations/2024-09-21-000010_create_resource_info/: up.sql
backend/migrations/2024-09-21-000012_create_mission_invalid/: down.sql  up.sql
backend/src/: main.rs
backend/src/admin/: mod.rs
backend/src/cache/: kpi.rs  mission.rs  mod.rs
backend/src/damage/: general.rs
backend/src/db/: mission.rs
backend/src/general/: character.rs  mod.rs  player.rs
backend/src/info/: brothers.rs  mod.rs
backend/src/kpi/: player.rs
backend/src/mission/: load.rs  mission.rs  mission_list.rs  mod.rs
db_init/: init.sql
script/: config.json
src/: lib.rs
(+61 files in other folders)
