[package]
name = "mission-backend-rs"
version = "0.12.12"
edition = "2021"

[dependencies]
pq-sys = { version = "0.6.3", features = ["bundled_without_openssl"] }
actix-web = { version = "4.9.0", features = ["cookies"] }
csv = "1.3.0"
derive_more = { version = "1.0.0", features = ["debug", "display", "error"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
encoding_rs = "0.8.34"
env_logger = "0.11.5"
log = "0.4.22"
redis = { version = "0.27.2" }
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking", "cookies"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
zstd = "0.13.2"
actix-files = "0.6.6"

[profile.release]
lto = true
